feat: Introduce Ceph integration tests and refactor storage verification
- Added `CephRgwContractTest` to validate live Ceph RGW service behavior against the S3 contract.
- Created `ComposeClusterContractTest` and `ComposeClusterScriptTest` to enforce deployment-specific rules and script integrity.
- Implemented `Repo` utility for read-only access to repository files and paths.
- Updated documentation in `README.md` for Ceph tests and their requirements.
- Refactored existing tests to ensure clarity on the use of live Ceph implementations.
- Ensured that no simulated S3 endpoints are used in the verification process.