@@ -1,7 +1,7 @@
 // Copyright 2026 Mark Andrew Ray-Smith Cityline Ltd
 // SPDX-License-Identifier: Apache-2.0
 
-package dev.stratus.testing.guardrails;
+package dev.stratus.platform.ceph;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -12,12 +12,10 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Read-only access to the repository tree for guardrail tests.
- *
- * This class is part of the Stratus on-premises data fabric platform.
+ * Read-only repository access for Ceph implementation guardrails.
  *
  * @author Mark Andrew Ray-Smith Cityline Ltd
- * @since 2026-07-15
+ * @since 2026-07-29
  * @version 1.0.0
  */
 final class Repo {
@@ -35,14 +33,13 @@ final class Repo {
         throw new IllegalStateException("Repository root not found above " + current);
     }
 
-    /** All git-tracked files, so generated and ignored material is never scanned. */
     static List<Path> trackedFiles() {
         Path root = root();
         try {
             Process process = new ProcessBuilder("git", "-C", root.toString(), "ls-files", "-z").start();
             String output = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
             if (process.waitFor() != 0) {
-                throw new IllegalStateException("git ls-files failed; the guardrail tests require git");
+                throw new IllegalStateException("git ls-files failed; the Ceph tests require git");
             }
             List<Path> files = new ArrayList<>();
             for (String entry : output.split("\0")) {
@@ -62,22 +59,7 @@ final class Repo {
 
     static String read(Path file) {
         try {
-            return new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
-        } catch (IOException e) {
-            throw new UncheckedIOException("Cannot read " + file, e);
-        }
-    }
-
-    /** File content, or null when the file is binary (contains a NUL byte). */
-    static String readIfText(Path file) {
-        try {
-            byte[] bytes = Files.readAllBytes(file);
-            for (byte b : bytes) {
-                if (b == 0) {
-                    return null;
-                }
-            }
-            return new String(bytes, StandardCharsets.UTF_8);
+            return Files.readString(file, StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new UncheckedIOException("Cannot read " + file, e);
         }
